Fixed the dashboard page wrapping

--- a/src/routes/_index.scss
+++ b/src/routes/_index.scss
@@ -404,7 +404,7 @@ html {
 *::before,
 *::after {
   border-width: 0;
-  // border-style: solid;
+  border-style: solid;
   border-color: #e2e8f0;
 }
 
@@ -536,6 +536,10 @@ img {
 
 .bg-gray-400 {
   background-color: #cbd5e0;
+}
+
+.bg-gray-500 {
+  background-color: #a0aec0;
 }
 
 .bg-gray-800 {
@@ -834,6 +838,10 @@ img {
 
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .mt-5 {
@@ -1184,11 +1192,45 @@ img {
   .sm\:ml-0 {
     margin-left: 0;
   }
+
+  .sm\:w-1\/2 {
+    width: 50%;
+  }
+}
+
+@media (min-width: 768px) {
+
+  .md\:w-1\/3 {
+    width: 33.333333%;
+  }
 }
 
 @media (min-width: 1024px) {
 
   .lg\:flex-1 {
     flex: 1 1 0%;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+}
+
+@media (min-width: 1280px) {
+
+  .xl\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .xl\:w-1\/4 {
+    width: 25%;
+  }
+
+  .xl\:w-1\/6 {
+    width: 16.666667%;
   }
 }
